--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bunyan": "^1.8.5",
     "express": "4.14.0",
     "history": "^4.4.0",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.1.9",
     "lodash": "4.16.2",
     "object-assign": "^4.1.0",
