--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,8 @@
     "no-use-before-define": 0,
     "id-length": 0,
     "semi": ["error", "always"]
+  },
+  "globals": {
+    "localStorage": true
   }
 }
