--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.5",
     "express": "4.14.0",
