--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-redux": "^4.4.6",
     "react-router": "next",
     "redux": "^3.6.0",
+    "redux-form": "^6.4.2",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
+    "serve-favicon": "^2.3.2",
     "tachyons": "^4.5.5"
   },
   "devDependencies": {
